--- a/package.json
+++ b/package.json
@@ -39,14 +39,16 @@
     "@radix-ui/react-tooltip": "1.1.6",
     "aos": "^2.3.4",
     "autoprefixer": "^10.4.20",
+    "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
+    "dotenv": "^17.2.1",
     "embla-carousel-react": "8.5.1",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
-    "next": "14.2.25",
+    "next": "^14.2.32",
     "next-themes": "^0.4.4",
     "react": "^19",
     "react-day-picker": "8.10.1",
