--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "lucide-react": "^0.454.0",
     "next": "^14.2.32",
     "next-themes": "^0.4.4",
+    "nookies": "^2.5.2",
     "react": "^19",
     "react-day-picker": "8.10.1",
     "react-dom": "^19",
