--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "next": "^14.2.32",
     "next-themes": "^0.4.4",
     "nookies": "^2.5.2",
+    "razorpay": "^2.9.6",
     "react": "^19",
     "react-day-picker": "8.10.1",
     "react-dom": "^19",
